# object_tracking

./: CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.md  README.rst  default-logging.json  pyproject.toml  tox.ini
.gitlab/issue_templates/: default.md
docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
object_tracking/: __init__.py  cli.py
object_tracking/utils/: logutils.py  misc.py  viz.py
scripts/: build.sh  clean.sh  env.sh  log-env-variables.sh
tests/: __init__.py  test_object_tracking.py
